# catty

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Earthfile  README.md  SECURITY.md  anan.rs  grammar.g4  lib.rs  mk.hs  parser.g4  push2repo.sh
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  docker-publish.yml  greetings.yml  rust.yml
docs/: README.md  README.rst
docs/lang/: README.rst
example/: HelloWorld.catty
grammar/antlr4/: grammar.g4  parser.g4
grammar/lex/: grammar.lex
sdk/catty-common/: Cargo.toml
sdk/catty-compiler/: Cargo.toml
sdk/cattyc/: Cargo.toml
sdk/cattyc/src/: main.rs
sdk/cattyi/: syn.go
sdk/cattysh/: Cargo.toml
sdk/cattysh/src/: main.rs
sdk/compiler/src/: lib.rs
sdk/core/grammar/: main.ebnf
sdk/inkilap/: main.rb  main.tcl
stdlib/: catlib.catty  elixir-touch.ex  mix.exs
stdlib/ML/: some.re
stdlib/core/: baseinterfaces.catty  catlib.catty  macro_panic.catty  panicking.h
stdlib/core/classes/: class.rs
stdlib/core/ownership/: memory.h
website/: index.html
