[package]
name = "cattyc"
version = "0.1.0"
authors = ["Yiğit Cemal Öztürk <ozturkyigitcemal@outlook.com.tr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
#llvm-sys = "110.0.1"
llvmenv = "0.3.1"
